--- a/stella.css
+++ b/stella.css
@@ -57,6 +57,7 @@ article:first-child {
 }
 
 article > header > a > .row {
+ display: block;
  margin-left: 0;
 }
 article > header > a:not(.collapsed) > .row > .title {
@@ -72,6 +73,10 @@ article > header > a > .row > .feed {
 }
 article > header > a > .row > .date {
  text-align: right;
+}
+
+article > header + div {
+ clear: both;
 }
 
 a:focus {
